# mini-wasm-othello

./: .gitignore  Cargo.toml  README.md  index.html  package.json  script.js  styles.css
.github/workflows/: deploy.yml
pkg/: mini_wasm_othello.d.ts  mini_wasm_othello.js  mini_wasm_othello_bg.wasm  mini_wasm_othello_bg.wasm.d.ts  package.json
src/: lib.rs
